# simple-UI-downloader

./: CMakeLists.txt  LICENSE  README.md  main.cpp
css/: menubar.css
downloadwidget/: downloadwidget.cpp  downloadwidget.hpp
internal/: datamodel.hpp  jsonhandler.cpp  jsonhandler.hpp  storage.cpp  storage.hpp
mainwindow/: mainwindow.cpp  mainwindow.hpp
progressbar/: progressbar.cpp  progressbar.hpp
services/: services.cpp  services.hpp
utils/: utils.cpp  utils.hpp
